2003-06-27  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6rc3. Fixed a security bug in
	twisted.web.

	* .: Releasing Twisted 1.0.6rc4. One more twisted.web bug.

	* .: Releasing Twisted 1.0.6.

2003-06-26  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6rc1.

	* .: Releasing Twisted 1.0.6rc2. Pop3 had failing tests.

2003-06-26  Clark C. Evans  <cce@twistedmatrix.com>

	* twisted/flow/*.py: Moved Flow from the sandbox to
	twisted.flow. The callback is dead. Long live the callback!

2003-06-26  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/pop3.py: POP3.authenticateUserXYZ no longer
	returns a Mailbox object. It now returns a 3-tuple. See
	twisted.cred.portal.Portal.login for more details about the return
	value.
	
2003-06-24  Brian Warner  <warner@lothar.com>

	* doc/howto/upgrading.html: Explain Versioned and rebuild()

2003-06-23  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/scripts/trial.py twisted/trial/reporter.py
	doc/man/trial.1: 

	Added a --tbformat={plain,emacs} option to trial. Now the default
	is to show the regular python traceback; if you want tracebacks
	that look like compiler output for emacs, use --tbformat=emacs.

2003-06-23  Cory Dodt <corydodt@yahoo.com>

	* twisted/python/util.py twisted/web/microdom.py 
	twisted/test/test_{util,xml}.py: preserveCase and caseInsensitive
	work on attribute names as well as element names.

2003-06-22  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/defer.py: Changed maybeDeferred API from
	maybeDeferred(deferred, f, *args, **kw) to maybeDeferred(f, *args,
	**kw).

2003-06-19  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/{checkers,credentials,realm}.py, 
	twisted/conch/ssh/userauth.py: Moved the Conch user authentication
	code to use the new version of Cred.

2003-06-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6alpha3. There was a problem in