@@ -1,3 +1,8 @@
+2003-07-01  Brian Warner  <warner@lothar.com>
+
+	* sandbox/warner/fusd_twisted.py: experimental glue code for FUSD,
+	a system for implementing Linux device drivers in userspace
+
 2003-06-27  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* .: Releasing Twisted 1.0.6rc3. Fixed a security bug in
